Функцию по заданию я добавил, но приложение для клиента не доделал.